containercard spacing fix

--- a/styles.css
+++ b/styles.css
@@ -31,10 +31,23 @@ header {
 	font-size: 16px;
 }
 
+.carddesc{
+	font-weight: 650;
+	text-align: right;
+	margin-top: 7px;
+}
+
+.cardheader{
+	font-size: 12px;
+	margin-top: 20px;
+	text-align: right;
+	font-family: PT Mono;
+}
+
 .line {
   height:1px;
   background:
-    repeating-linear-gradient(to right, #454545 0,#454545 3px, transparent 3px, transparent 5.5px);
+   repeating-linear-gradient(to right, #454545 0,#454545 3px, transparent 3px, transparent 5.5px);
    margin-top: 23px;
    margin-bottom: 23px;
 }
